# c-ds

./: CMakeLists.txt
.github/workflows/: cmake.yml
include/: list.h  priority_queue.h  queue.h  stack.h  vector.h
src/: list.c  priority_queue.c  queue.c  stack.c  vector.c  vector.h
tests/: list_test.cpp  priority_queue_test.cpp  queue_test.cpp  stack_test.cpp  vector_test.cpp
